--- a/app/static/css/site/site.css
+++ b/app/static/css/site/site.css
@@ -49,6 +49,7 @@ body {
     line-height: 1.6;
     min-height: 100vh;
     overflow-x: hidden;
+    padding-top: 65px;
 }
 
 /* ==========================================================================
